[gd_scene load_steps=18 format=2]

[ext_resource path="res://Projectiles/bullet.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/EnergyBullet.gd" type="Script" id=2]
[ext_resource path="res://Nodes/HitBox.gd" type="Script" id=3]
[ext_resource path="res://Nodes/HurtBox.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=12]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 2.2
radial_accel_random = 1.0
tangential_accel_random = 1.0
scale_curve = SubResource( 10 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 2.0

[sub_resource type="CircleShape2D" id=7]
radius = 7.0

[sub_resource type="CircleShape2D" id=11]
radius = 4.0

[sub_resource type="CircleShape2D" id=13]
radius = 8.0

[node name="EnergyBullet" type="KinematicBody2D" groups=["Projectile"]]
z_index = 5
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 12 )
amount = 30
lifetime = 2.0
speed_scale = 5.0
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 3 )
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 13 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
